--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="src/index.css"/>
 </head>
 <body>
-  <h1 id="title">Simple Fitness Plan Generator ✅</h1>
+  <h1>Simple Fitness Plan Generator ✅</h1>
   <form id="myForm">
     <p>Enter your age:</p>
     <input
